--- a/assets/style.css
+++ b/assets/style.css
@@ -48,6 +48,7 @@ ul{
 .date img{
     width: 14px;
 }
+
 /* header-top */
 .header__Top {
     background-color: #123c69;
@@ -232,6 +233,7 @@ span.mskIcon {
     list-style: none;
 }
 .heder-desktop .menu li a{
+    font-family: 'iransansbold';
     text-decoration: unset;
     color: white;
     font-size: 1rem;
@@ -328,6 +330,7 @@ span.mskIcon {
     display: flex;
     gap: 0.5rem;
    align-items: center;
+   font-family: 'iransansbold';
 }
 .heder-desktop .standard-menu li{
     padding: 0.5rem 1rem 0.5rem;
@@ -499,7 +502,7 @@ h2 a{
     gap: 0.25rem;
 }
 
-.news-item  small.rotitr{
+small.rotitr{
     color: #098481;
     min-height: 22px;
     text-align: justify;
@@ -578,9 +581,10 @@ color: #123c69;
   color: white;
   padding: 0.25rem 1rem;
   line-height: 1.8;
+  font-family: "iransansbold";
 }
 @media screen and (min-width:992px){
-    .news-read-list{
+    .news-read .news-read-list{
         --grid-column:3 !important;
     }
 }
@@ -590,8 +594,8 @@ color: #123c69;
     height: 100px;
 }
 .news-read-item .img img{
-    width: 150px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     transition: var(--transition);
 }
@@ -614,6 +618,7 @@ color: #123c69;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 0.25rem;
 }
 .news-read-item .title a{
     color: black;
@@ -757,4 +762,196 @@ color: #123c69;
         --grid-column: 1 !important;
       }
 }
+/* network */
+.network-wrapper{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: 1.5rem;
+}
+.network-wrapper .news-read-item{
+ flex-direction: column;
+}
+.network-wrapper  .news-read-item .img {
+    overflow: hidden;
+    width: 100%;
+    height: 200px;
+  }
+  .network-wrapper  .news-read-item .dec{
+    --line-limit:2;
+    font-size: 14px;
+    color: gray;
+  }
+  .network-wrapper .news-read-item:nth-child(1){
+    border-bottom: 1px solid #dddddd;
+    padding-bottom: 1rem;
+  }
+.network-wrapper-item .title a{
+    color: black;
+  font-size: 14px;
+  text-align: justify;
+  transition: var(--transition);
+}
+.network-wrapper-item:hover .title a{
+    color: #123c69;
+}
+@media only screen and (min-width:991px){
+    .network-wrapper{
+        grid-template-columns: repeat(3, 1fr);
+ }
+.network-wrapper-item:nth-child(1){ grid-area: 1 / 1 / 2 / 4; }
+.network-wrapper-item:nth-child(2) { grid-area: 2 / 3 / 3 / 4; }
+.network-wrapper-item:nth-child(3){ grid-area: 2 / 2 / 3 / 3; }
+.network-wrapper-item:nth-child(4){ grid-area: 2 / 1 / 3 / 2; }
+.network-wrapper .news-read-item{
+    flex-direction: row;
+   }
+   .network-wrapper .news-read-item:nth-child(1){
+    padding-bottom: unset;
+    border-bottom: unset;
+   }
+   .network-wrapper-item .news-read-item:nth-child(1) a{
+      flex: 6;
+   }
+   .network-wrapper-item .content{
+    flex: 6;
+    justify-content: center;
+  }
+  .network-wrapper .news-read-item .img {
+    height: 300px;
+}
+.network-wrapper-item:not(:first-child) .content{
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   gap: 0.5rem;
+}
+}
+/* cultural */
+.cultural-wrapper .container-inner-section{
+    display: grid;
+    --grid-col:1;
+    grid-template-columns: repeat(var(--grid-col) , 1fr);
+    gap: 1rem;
+}
+.cultural-wrapper .news-read-item:first-child{
+    flex-direction: row;
+}
+.cultural-wrapper .news-read-item .content .dec{
+    --line-limit:2;
+    font-size: 14px;
+    color: gray;
+    text-align: justify;
+}
+.cultural-wrapper .news-read-item:not(:last-child){
+    border-bottom: 1px solid #dddddd;
+    padding-bottom: 0.5rem;
+}
+.cultural-wrapper .box-innser:nth-child(1) .title-box , .cultural-wrapper .box-innser:nth-child(3) .title-box{
+    background-color:#1e73be;
+}
+.cultural-wrapper .box-innser:nth-child(1) .title , .cultural-wrapper .box-innser:nth-child(3) .title{
+    border-color: #1e73be;
+}
+.cultural-wrapper .box-innser:nth-child(1) small.rotitr , .cultural-wrapper .box-innser:nth-child(3) small.rotitr {
+    color: #1e73be;
+}
 
+
+@media only screen and (min-width:991px){
+    .cultural-wrapper .container-inner-section{
+        display: grid;
+        --grid-col:3;
+    }
+    .cultural-wrapper .news-read-list{
+        --grid-column: 1;
+    }
+    .cultural-wrapper .news-read-item:first-child{
+        flex-direction: column;
+    }
+    .cultural-wrapper .news-read-item .img {
+        width: 100%;
+        height: 150px;
+    }
+    .three-tab .news-read-item:not(:last-child) , .news-read .news-read-item:not(:last-child){
+        border: unset;
+    }
+ 
+}
+/* album */
+.album-gallery {
+    display: grid;
+    --grid-col:2;
+    grid-template-columns: repeat(var(--grid-col) , 1fr);
+    gap: 0.5rem;
+}
+.album-gallery img{
+    object-fit: cover;
+}
+@media only screen and (min-width:768px) and (max-width:991px){
+    .album-gallery {
+        --grid-col:3;
+    }
+}
+@media only screen and (min-width:992px){
+    .album-gallery {
+        --grid-col:6;
+    }
+}
+/* footer */
+.footer-bottom{
+    background-color: #123c69;
+    color: white;
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 14px;
+} 
+.footer-bottom a{
+    color: #01ae95
+}
+.footer-main{
+    background-color: #eee;
+    margin-top: 1rem;
+}
+.footer-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer-content .logo{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+.footer-content .logo p{
+    font-size: 14px;
+}
+
+.footer-content.container-inner-section{
+    margin: 0 auto;
+    border-top: 1px solid #dddddd;
+  padding-top: 0.5rem;
+
+}
+.footer-content img {
+	width: 40px;
+  height: 40px;
+}
+.footer-main {
+	background-color: #eee;
+    padding: 2rem 0 0.75rem;
+}
+footer svg{
+    fill: black;
+}
+.social{
+    display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+@media screen and (min-width:768px){
+    .footer-content{
+        flex-direction: row;
+    }
+}
