--- a/assets/style.css
+++ b/assets/style.css
@@ -576,7 +576,7 @@ color: #123c69;
   border-bottom: 3px solid #098481;
 }
 .container-inner-section .title-box{
-  display: inline;
+    display: inline-flex;
   background-color: #098481;
   color: white;
   padding: 0.25rem 1rem;
@@ -679,8 +679,8 @@ color: #123c69;
 }
 .box-three-tab.video .img{
     position: relative;
-    width: 120px;
-    height: 90px;
+    width: 130px;
+    height: 102px;
     transition: 500ms;
 }
 
@@ -748,7 +748,7 @@ color: #123c69;
         flex-direction: row;
     }
     .political-wrapper .news-read-item .img{
-        width: 250px;
+        width: 256px;
         height: 100%;
     }
     .political-wrapper .news-read-item .content{
@@ -897,6 +897,19 @@ color: #123c69;
     .album-gallery {
         --grid-col:6;
     }
+}
+.album-gallery a{
+   position: relative;
+   display: block;
+   width: 220px;
+   height: 200px
+}
+.album-gallery img::after{
+  content: "";
+  position: absolute;
+  background-color: gray;
+  width: 100%;
+  height: 100%
 }
 /* footer */
 .footer-bottom{
