--- a/assets/style.css
+++ b/assets/style.css
@@ -904,13 +904,19 @@ color: #123c69;
    width: 220px;
    height: 200px
 }
-.album-gallery img::after{
-  content: "";
-  position: absolute;
-  background-color: gray;
-  width: 100%;
-  height: 100%
+.gallery{
+    position: relative;
 }
+.album-gallery  .gallery:hover a:after{
+    position: absolute;
+    content: "";
+    background: #123c698c;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0;
+}
+
 /* footer */
 .footer-bottom{
     background-color: #123c69;
