--- a/assets/style.css
+++ b/assets/style.css
@@ -901,8 +901,8 @@ color: #123c69;
 .album-gallery a{
    position: relative;
    display: block;
-   width: 220px;
-   height: 200px
+   width: 100%;
+   height: 200px;
 }
 .gallery{
     position: relative;
